<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.edu.pwr.wiz.wzorlaboratorium6.MainActivity">

    <TextView
        android:text="@string/txt_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txt_values" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:layout_below="@id/txt_values"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/values"
        android:hint="@string/values" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/operation"
        android:layout_below="@id/values"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:entries="@array/spin_ops" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_calculate"
        android:text="@string/btn_calculate"
        android:onClick="calculate"
        android:layout_below="@id/operation"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:visibility="invisible"
        android:textSize="10pt"
        android:layout_below="@id/btn_calculate"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        />

</RelativeLayout>
